@startuml
title UML Class Diagram - High Level System Overview

package MTspin-mcu-firmware {
  class ArduinoSketch {
    +setup()
    +loop()
  }

  class Configuration {
    +{static} Configuration& GetInstance()
    +void BeginHardware()
    +void ToggleLogs()
    +void ReportFirmwareVersion()
  }

  class ControlSystem {
    +void Begin()
    +void CheckAndProcess()
    -void LogGeneralStatus()
  }
}

package ArduinoLog {
  class Logging {
  }
}

package MT-arduino-momentary-button {
  class MomentaryButton {
  }
}

package MT-arduino-stepper-driver {
  class StepperDriver {
  }
}

ArduinoSketch "1" *--"1" ControlSystem : Has

Configuration <.. Logging

ControlSystem "1" o-- "1" Configuration : Has
ControlSystem "1" *-- "3" MomentaryButton : Has
ControlSystem "1" *-- "1" StepperDriver : Has
ControlSystem <.. Logging

@enduml